--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,20 @@
-pandas
-numpy
-scikit-learn
-torch
+# Core
+pandas>=1.5
+numpy>=1.24
+scikit-learn>=1.1
+torch>=2.0
 scipy
+matplotlib
+
+# For embeddings (pick one)
+transformers>=4.30       # for ProtT5 (Hugging Face)
+#sentencepiece             for ProtT5 tokenizer
+#fair-esm                  optional: for esm (pip install fair-esm)
+
+# For serving
 fastapi
 uvicorn
-python-multipart
 pydantic
-matplotlib
+
+# Utilities
+tqdm
